cluster/apps/cloudflare-operator/networkpolicies/cloudflare-operator.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-operator
  namespace: cloudflare-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: api.ipify.org
        - matchName: checkip.amazonaws.com
        - matchName: hooks.slack.com
        - matchName: ifconfig.me
        - matchName: ipecho.net
        - matchName: myip.is
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
