cluster/apps/cloudflare-operator/networkpolicies/prometheus-egress-cloudflare-operator.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-cloudflare-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-operator
            app.kubernetes.io/instance: cloudflare-operator
            "k8s:io.kubernetes.pod.namespace": cloudflare-operator
      toPorts:
        - ports:
            - port: "8080"
